syntax = "proto3";

package Kahuna.Persistence.Protos;

message RocksDbLockMessage {
  string resource = 1;
  optional bytes owner = 2;
  int64 expiresPhysical = 3;
  uint32 expiresCounter = 4;
  int64 fencingToken = 5;
  int32 state = 6;
}

message RocksDbKeyValueMessage {
  string key = 1;
  optional bytes value = 2;
  int64 expiresPhysical = 3;
  uint32 expiresCounter = 4;
  int64 revision = 5;
  int32 state = 6;
}